update swagger docs and artist controller methods
